// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders playlists when they exist 1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <div
      className="playlist-container"
    >
      <div
        className="null playlist-card button-hover playlist-card-contents"
        key="0"
        onClick={[Function]}
        tabIndex="0"
      >
        <h5
          className="playlist-name-title"
        >
          playlist 1
        </h5>
      </div>
      <div
        className="null playlist-card button-hover playlist-card-contents"
        key="1"
        onClick={[Function]}
        tabIndex="0"
      >
        <h5
          className="playlist-name-title"
        >
          playlist 2
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`dashboard matches snapshot  1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <div
      className="playlist-container"
    />
  </div>
</div>
`;
